--- a/src/fbfriends.less
+++ b/src/fbfriends.less
@@ -34,7 +34,7 @@
 }
 
 .fbFriends-spinner {
-  background-image: url(/ajax-loader.gif);
+  background-image: url(ajax-loader.gif);
   background-position: center;
   background-repeat: no-repeat;
   width: 100%; 
