and stupid isaacs are even stupider

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,10 +6,10 @@
     <script type='text/javascript' src='http://connect.facebook.net/en_US/all.js'></script>
     <script type='text/javascript' src='js/bootstrap.min.js'></script>
     <script type='text/javascript' src='js/jquery-ui-1.9.2.custom.js'></script>
-    <script type='text/javascript' src='files/fbFriends.js'></script>
+    <script type='text/javascript' src='files/fbfriends.js'></script>
     <script type='text/javascript' src='js/demo.js'></script>
     <script type='text/javascript' src='js/toastr.js'></script>
-    <link rel='stylesheet' type='text/css' href='files/fbfriends.css'/>
+    <link rel='stylesheet' type='text/css' href='files/fbFriends.css'/>
     <link rel='stylesheet' type='text/css' href='css/bootstrap.min.css'/>
     <link rel='stylesheet' type='text/css' href='css/demo.css'/>
     <link rel='stylesheet' type='text/css' href='css/syntax.css'/>
