--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   <head>
     <title>FbFriends</title>
     <script type='text/javascript' src='http://code.jquery.com/jquery-1.8.0.min.js'></script>
-    <script type='text/javascript' src='http://connect.facebook.net/en_US/all.js'></script>
+    <script type='text/javascript' src='https://connect.facebook.net/en_US/all.js'></script>
     <script type='text/javascript' src='js/bootstrap.min.js'></script>
     <script type='text/javascript' src='js/jquery-ui-1.9.2.custom.js'></script>
     <script type='text/javascript' src='files/fbfriends.js'></script>
