--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,7 @@
     <link rel='stylesheet' type='text/css' href='css/ui-lightness/jquery-ui-1.9.2.custom.css'/>
   </head>
   <body>
+    <div id="fb-root"></div>
     <a href="https://github.com/icambron/fbfriends"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub"></a>
     <div class="container">
       {{content}}
